значит если минимальный возраст вынести в константу то в дальнейшем если нужно изменить его, то нужно изменить только в одном месте, что удобно, выучил что то новое!